--- a/.github/workflows/publish-components.yaml
+++ b/.github/workflows/publish-components.yaml
@@ -16,4 +16,4 @@ jobs:
           PUSH: ${{ github.event.push }}
         shell: bash {0} # don't fast fail
         run: |
-            echo $PUSH
+          env
